# EndianedBinaryIO

./: .gitignore  README.md  benchmark.py  pyproject.toml  setup.py
bier/: __init__.py
bier/EndianedBinaryIO/: EndianedBytesIO.py  EndianedIOBase.py  __init__.py  _structs.py
src/EndianedBinaryIO/: EndianedBytesIO.cpp  EndianedIOBase.cpp  EndianedStreamIO.cpp  PyConverter.hpp
